[gd_scene load_steps=2 format=3 uid="uid://1qc5ndlimpem"]

[ext_resource type="Script" path="res://TimeControls.gd" id="1_6cc55"]

[node name="TimeControls" type="HBoxContainer"]
process_mode = 3
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6cc55")

[node name="Pause" type="Button" parent="."]
layout_mode = 2
text = "||"

[node name="Play" type="Button" parent="."]
layout_mode = 2
text = ">"

[node name="FastForward" type="Button" parent="."]
layout_mode = 2
text = ">>"

[node name="VeryFastForward" type="Button" parent="."]
layout_mode = 2
text = ">>>"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="FastForward" to="." method="_on_fast_forward_pressed"]
[connection signal="pressed" from="VeryFastForward" to="." method="_on_very_fast_forward_pressed"]
